# kb-share-rs

./: .gitignore  Cargo.toml  README.md  build.rs  debug.ps1  package.ps1
src/: keyboard.rs  keycodenames.rs  main.rs  net_client.rs  net_server.rs  style.css  util.rs
src/client/: imp.rs  mod.rs
src/menu/: imp.rs  mod.rs
src/resources/: client.ui  main_menu.ui  menu.ui  resources.gresource.xml  server.ui
src/server/: imp.rs  mod.rs
