[package]
name = "kb-share-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.1", package = "gtk4" }
enigo = { path = "../deps/enigo", version = "0.0.14" }
phf = { version = "0.11.1", features = ["macros"] }
winapi = "0.3.9"

[build-dependencies]
glib-build-tools = "0.16.0"

[features]
console = []
